# media-importer

./: .gitignore  MediaPorter_mac.spec  MediaPorter_win.spec  PLAN.md  README.md  appicon.icns  assign_drives.py  build_mac.sh  build_win.bat  import_card.py  inspect_files.py  main.py  pyproject.toml  requirements.txt  scan_card.py
backend/core/: camera_profiles.py  dedup.py  importer.py  inspector.py  metadata.py  models.py  rules.py  safety.py  scanner.py
backend/db/: models.py  repository.py
backend/utils/: config.py  detector.py  log_setup.py  registry.py
docs/: MASTERPLAN.md  PLAN.md  RESEARCH.md
gui/: main_window.py  theme.py
gui/widgets/: dest_panel.py  file_table.py  history_panel.py  settings_panel.py  source_panel.py
tests/: test_dedup.py  test_detector.py  test_importer.py  test_rules.py  test_safety.py  test_scanner.py
